--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ body
 {
 	/*max-width: 560px;*/
 	margin: 0 auto;
-	padding: 30px;
+	/*padding: 30px;*/
 	font-family: 'Roboto', sans-serif;
 	color: #424242;
 	caret-color: #00BCD4;
@@ -55,7 +55,7 @@ form
 input
 {
 	border: 1px solid #00BCD4;
-	border-radius: 2px 0 0 2px;
+	border-radius: 2px;
     color: #00BCD4;
 }
 
@@ -75,10 +75,8 @@ input,
 
 .button
 {
-	position: absolute;
-	margin-left: -1px;
 	border: 1px solid transparent;
-	border-radius: 0 2px 2px 0;
+	border-radius: 2px;
 	background-color: #00BCD4;
 	color: white;
 }
@@ -132,17 +130,30 @@ button.button
 .wrapper
 {
 	display: inline-block;
+	margin-bottom: 20px;
 }
 
 .wrapper-inner
 {
 	max-width: 200px;
-	max-height: 200px;
+	/*max-height: 200px;*/
 	overflow: hidden;
 }
 
 .puppy-pic
 {
-	width: 100%;
-	height: 100%;
+	display: block;
+	max-width: 100%;
+	/*max-height: 100%;*/
+	object-fit: contain;
+}
+
+.grid
+{
+	visibility: hidden;
+}
+
+.grid-item
+{
+	width: 200px;
 }
