--- a/main.css
+++ b/main.css
@@ -1,44 +1,51 @@
 body
 {
-	/*max-width: 560px;*/
-	margin: 0 auto;
-	/*padding: 30px;*/
 	font-family: 'Roboto', sans-serif;
 	color: #424242;
 	caret-color: #00BCD4;
 }
 
+.sidebar
+{
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	width: 20%;
+	height: 100%;
+	background-color: #fff;
+}
+
+.main
+{
+	padding-left: 20%;
+	background-color: red;
+}
+
+.section-wrapper
+{
+	padding: 20px;
+}
+
+/* TYPOGRAPHY */
+
 h1
 {
-	border-bottom: 1px solid #00BCD4;
-	padding-bottom: 30px;
+	margin: 0;
+	font-size: 60px;
 	text-align: center;
-}
-
-h1, h2
-{
-	color: #00BCD4;	
-}
-
-h2, input, button, .title
-{
-	text-transform: uppercase;
-}
-
-h1, h2, p
-{
-	margin: 0 0 30px 0;
+	color: #00BCD4;
 }
 
 p
 {
-	text-align: left;
 	line-height: 1.3em;
 }
 
 a
 {
 	color: #00BCD4;
+	text-decoration: none;
 }
 
 a:hover
@@ -46,16 +53,48 @@ a:hover
 	color: #4DD0E1;
 }
 
-form
+input,
+button,
+.caption
 {
-	text-align: center;
-	margin: 0 70px 30px 0;
+	text-transform: uppercase;
+}
+
+/* FORM */
+
+fieldset
+{
+	margin: 0;
+	padding: 0;
+	border: 0;
+	margin-bottom: 10px;
+}
+
+input[type="text"]
+{
+	width: 90%;
+}
+
+.result-type
+{
+	display: inline-block;
+	border: 1px solid blue;
+}
+
+input[type="submit"]
+{
+	position: fixed;
+	bottom: 0;
+	width: 20%;
 }
 
 input
 {
 	border: 1px solid #00BCD4;
 	border-radius: 2px;
+	padding: 10px;
+	outline: none;
+	font-size: 12px;
     color: #00BCD4;
 }
 
@@ -65,18 +104,14 @@ input::placeholder
 	opacity: .7;
 }
 
-input,
 .button
 {
+	width: 100%;
+	border: 1px solid transparent;
+	border-radius: 2px;
 	padding: 10px;
 	outline: none;
 	font-size: 12px;
-}
-
-.button
-{
-	border: 1px solid transparent;
-	border-radius: 2px;
 	background-color: #00BCD4;
 	color: white;
 }
@@ -86,46 +121,30 @@ input,
 	background-color: #4DD0E1;
 }
 
-button.button
+/* MASONRY GRID CLASSES */
+
+.grid
 {
-	position: static;
-	margin-left: 0;
-	border-radius: 2px;
+	visibility: hidden;
 }
 
-.result-container
+.grid-sizer,
+.grid-item
 {
-	display: flex;
-	flex-direction: column;
+	width: 22%;
 }
 
-.result
+.gutter-sizer
 {
-	max-width: 320px;
-	margin: 0 auto 30px auto;
-	text-decoration: none;
+	width: 4%;
 }
 
-.thumbnail
+.grid-item
 {
-	display: block;
-	border-radius: 2px 2px 0 0;
+	margin-bottom: 20px;
 }
 
-.title
-{
-	margin-bottom: 0;
-	border-radius: 0 0 2px 2px;
-	padding: 5px;
-    background-color: #00BCD4;
-	color: white;
-	font-size: 10px;
-}
-
-.title:hover
-{
-	background-color: #4DD0E1;
-}
+/* RESULTS */
 
 .wrapper
 {
@@ -135,25 +154,26 @@ button.button
 
 .wrapper-inner
 {
-	max-width: 200px;
-	/*max-height: 200px;*/
 	overflow: hidden;
 }
 
-.puppy-pic
+.thumbnail
 {
 	display: block;
-	max-width: 100%;
-	/*max-height: 100%;*/
-	object-fit: contain;
+	width: 100%;
 }
 
-.grid
+.caption
 {
-	visibility: hidden;
+	margin: 0;
+	border-radius: 0 0 2px 2px;
+	padding: 5px;
+    background-color: #00BCD4;
+	color: white;
+	font-size: 10px;
 }
 
-.grid-item
+.caption:hover
 {
-	width: 200px;
+	background-color: #4DD0E1;
 }
